--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
 
 install:
   - python3 -m pip install cibuildwheel==1.4.1
+  - python3 -m pip install cython==0.29.17
 
 script:
   # build the wheels, put them into './wheelhouse'
