--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,17 @@ env:
 
 install:
   - python -m pip install cython==0.29.17
+  - python -m pip install cibuildwheel==1.4.1
+
 
 script:
-  - python setup.py sdist bdist_wheel
+  - python -m cibuildwheel --output-dir wheelhouse
+
+
+after_success:
+  # if the release was tagged, upload them to PyPI
+  - |
+    if [[ $TRAVIS_TAG ]]; then
+      python3 -m pip install twine
+      python3 -m twine upload wheelhouse/*.whl
+    fi
